--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
+    "typeRoots": ["./src/types", "./node_modules/@types","./types"],
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
